fixes icon alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,10 +40,12 @@ body {
   background-color: black;
 }
 
+p, h2, h3 {
+  margin: 0;
+}
 
 .main {
   width: 496px;
-  height: 350px;
   margin-left: -253px;
   margin-top: -175px;
   position: absolute;
@@ -55,23 +57,12 @@ body {
   text-align: center; 
 }
 
-
 .title {
   color: black;
   background-color: rgba(255, 255, 255, .7);
   font-size: 20px;
   padding: 10px;
   padding-bottom: 19px;
-}
-  
- .info {
-   background-color: rgba(0, 0, 0, .7);
-   color: white;
-   padding: 15px 30px 10px 30px;
-}
-
-p, h2, h3 {
-  margin: 0;
 }
 
 .title h3 {
@@ -85,6 +76,33 @@ p, h2, h3 {
   font-size: 2.9em;
   line-height: .9em;
   letter-spacing: .1em;
+}
+
+.info {
+  background-color: rgba(0, 0, 0, .7);
+  color: white;
+  padding: 32px 30px 4px 30px;
+}
+
+.info p{
+  font-weight: 100;
+  letter-spacing: .1em;
+  line-height: 1.4em;
+}
+
+.icons{
+  overflow: auto;
+  padding-top: 10px;
+}
+
+.icons #hfd{
+  float:right;
+  margin-right: 11px;
+  margin-left:11px;
+}
+.icons #kids{
+  float:left;
+  margin-left:32px;
 }
 
 
